Bug 478405 - Subscriber count on an open video is hard to read due to not using separation dots/commas
Summary: Subscriber count on an open video is hard to read due to not using separation...
Status: RESOLVED FIXED
Alias: None
Product: PlasmaTube
Classification: Applications
Component: general (show other bugs)
Version: 24.01.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Linus Jahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-11 17:15 UTC by Bart Ribbers
Modified: 2024-04-07 00:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Screenshot showing subscriber count on a random video (8.77 KB, image/jpeg)
2023-12-11 17:15 UTC, Bart Ribbers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2023-12-11 17:15:10 UTC
Created attachment 164095 [details]
Screenshot showing subscriber count on a random video

See attached image. It would be better if it was formatted "12.200.000" (Dutch locale) or "12,200,000" (non-Dutch locale, I suppose).

Or even better, shorten the number like the views and likes counter just beneath it. "12M".
Comment 1 Joshua Goins 2024-04-07 00:27:46 UTC
Git commit 3957089f2fed68e9113356c015049a2312afeea6 by Joshua Goins.
Committed on 07/04/2024 at 00:27.
Pushed by redstrate into branch 'master'.

Fix the sub count not being formatted correctly

Now everything should be in the standard K (thousands) or M (millions)
format. On the API side now everything is in integers instead of text.

M  +15   -4    src/api/video.cpp
M  +2    -2    src/api/video.h
M  +1    -1    src/models/videomodel.h
M  +1    -1    src/ui/ChannelPage.qml
M  +1    -1    src/ui/SubscriptionListPage.qml
M  +5    -4    src/ui/components/SubscriptionButton.qml
M  +2    -2    src/ui/components/VideoListItem.qml
M  +1    -1    src/ui/videoplayer/VideoPlayer.qml

https://invent.kde.org/multimedia/plasmatube/-/commit/3957089f2fed68e9113356c015049a2312afeea6