Fix the sub count not being formatted correctly

Now everything should be in the standard K (thousands) or M (millions)
format. On the API side now everything is in integers instead of text.

BUG: 478405